# CorpRAG

./: .gitignore  README.md  ruff_output.txt  step1_agent.py  step2_rag.py  合规的企业级 Agent 平台.txt
financial-agent-api/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PLATFORM_GUIDE.md  README.md  check_health.ps1  check_python.ps1  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start_e2e.ps1  start_service.ps1  test_conn.py  test_docs.ps1  test_endpoints.ps1
financial-agent-api/app/: __init__.py  exceptions.py  main.py
financial-agent-api/app/agent/: __init__.py  chain.py  graph.py  hitl_manager.py  tools.py
financial-agent-api/app/api/: __init__.py  routes_chat.py  routes_docs.py  routes_hitl.py  routes_mlops.py  routes_review.py
financial-agent-api/app/core/: __init__.py  config.py  dependencies.py  enums.py  limiter.py  logging_config.py  protocols.py
financial-agent-api/app/eval/: __init__.py  evaluator.py
financial-agent-api/app/mcp/: __init__.py  client.py  registry.py  server.py
financial-agent-api/docs/: recommendation_tools.md
financial-agent-api/examples/: demo_recommendation_tools.py
financial-agent-api/k8s/: README.md  api-deployment.yaml  api-hpa.yaml  api-service.yaml  chromadb-deployment.yaml  chromadb-service.yaml  configmap.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  secret.example.yaml
financial-agent-api/scripts/: check_services.py  intent_model.pkl  test_model.py  train_intent_classifier.py
financial-agent-api/sdk/: __init__.py  agent_platform_client.py  setup.py
financial-agent-api/templates/: new_provider_template.py  new_tool_template.py
financial-agent-api/terraform/: .gitignore  DEPLOYMENT_GUIDE.md  README.md  ecs.tf  iam.tf  main.tf  network.tf  outputs.tf  terraform.tfvars.example  validate_config.py  variables.tf
financial-agent-api/tests/: __init__.py  test_ab_testing.py  test_drift_detector.py  test_mlops_integration.py  test_recommendation_tool.py
llama-index-app/: run.py  (+1 more)
(+101 files in other folders)
